--- a/IPMS_KLK/Views/MainMenuOptions/GeneralWorkerMenuOptions/GuidedByJob.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/GeneralWorkerMenuOptions/GuidedByJob.xaml
@@ -15,76 +15,122 @@
 
     <ContentPage.Resources>
         <ResourceDictionary>
-            <Style TargetType="Button">
-                <Setter Property="CornerRadius" Value="30" />
-                <Setter Property="TextColor" Value="White"/>
-                <Setter Property="TextTransform" Value="None"/>
-                <Setter Property="FontFamily" Value="sfBlack"/>
-                <Setter Property="Padding" Value="10,10,10,10"/>
-                <Setter Property="VerticalOptions" Value="FillAndExpand"/>
-                <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
-                <Setter Property="Margin" Value="0,0,0,2"/>
+            <Style TargetType="ImageButton">
+                <Setter Property="Source" Value="scan.png"/>
+                <Setter Property="BackgroundColor" Value="Transparent"/>
+                <Setter Property="CornerRadius" Value="20"/>
+                <Setter Property="Margin" Value="0,5,0,5"/>
+                <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
+                <Setter Property="HeightRequest" Value="50"/>
+                <Setter Property="WidthRequest" Value="50"/>
+            </Style>
+            
+            <Style TargetType="Label">
+                <Setter Property="FontSize" Value="14"/>
                 <Setter Property="TextColor" Value="Black"/>
-                <Setter Property="BackgroundColor" Value="#faefbe"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+                <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
+                <Setter Property="FontFamily" Value="sfBlack"/>
+            </Style>
+
+            <Style x:Key="labelBaseStyle" TargetType="Button">
                 <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Padding" Value="10,10,10,10"/>
+                <Setter Property="Margin" Value="0"/>
+                <Setter Property="CornerRadius" Value="20"/>
+                <Setter Property="TextTransform" Value="None"/>
+                <Setter Property="VerticalOptions" Value="FillAndExpand"/>
+                <Setter Property="HorizontalOptions" Value="Fill"/>
+                <Setter Property="FontFamily" Value="sfBlack"/>
+                <Setter Property="TextColor" Value="Black"/>
+            </Style>
+
+            <Style x:Key="bottom_btn" TargetType="Button" BasedOn="{StaticResource labelBaseStyle}">
+                <Setter Property="BackgroundColor" Value="#effd5f"/>
+                <Setter Property="Margin" Value="0,0,0,2"/>
+            </Style>
+
+            <Style TargetType="Frame" x:Key="button_shadow_frame">
+                <Setter Property="BackgroundColor" Value="DarkGray"/>
+                <Setter Property="Padding" Value="0"/>
+                <Setter Property="CornerRadius" Value="20"/>
             </Style>
 
             <Style TargetType="Frame">
-                <Setter Property="BackgroundColor" Value="DarkGray"/>
+                <Setter Property="BackgroundColor" Value="White"/>
+                <Setter Property="BorderColor" Value="DarkGray"/>
+                <Setter Property="CornerRadius" Value="10"/>
+                <Setter Property="HasShadow" Value="True"/>
                 <Setter Property="Padding" Value="0"/>
-                <Setter Property="CornerRadius" Value="30"/>
+                <Setter Property="Margin" Value="10,10,10,10"/>
+            </Style>           
+
+            <Style x:Key="label_for_OC" TargetType="Label">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontFamily" Value="sfBlack"/>
+                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand"/>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
 
     <ContentPage.Content>
         <StackLayout Margin="0,0,0,0">
-            <StackLayout Margin="30,5,0,0">
-                <Grid>
-                    <lottie:AnimationView Animation="Resources.greenboy.json" 
+            <StackLayout Margin="0,20,0,0">
+                <Grid Margin="0,0,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="60"/>
+                        <RowDefinition Height="80"/>
+                    </Grid.RowDefinitions>
+                    <lottie:AnimationView Animation="Resources.login-anim.json" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"
                          AnimationSource="EmbeddedResource"
                          RepeatMode="Infinite"
                          AutoPlay="True"
-                         HeightRequest="200"
-                         VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"
-                         Margin="0,0,200,0"/>
-                    <StackLayout Margin="0,0,20,0" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand">
-                        <Label Text="Guided By"
-                               FontSize="50"  
+                         HeightRequest="200"    
+                         VerticalOptions="CenterAndExpand"
+                         Margin="0,0,0,0"/>
+                    <StackLayout Grid.Row="0" Grid.Column="1"  VerticalOptions="Center" HorizontalOptions="StartAndExpand">
+                        <Label Text="Guided By" 
+                               FontSize="40"  
                                TextColor="Black"
                                FontFamily="passion"/>
-                        <Label Text="JOB" HorizontalOptions="EndAndExpand"
-                               FontSize="70"  
+                        <Label Text="JOB"
+                               FontSize="60"  
                                TextColor="Black"
                                FontFamily="passion"/>
                     </StackLayout>
                 </Grid>
             </StackLayout>
 
-
-            <StackLayout VerticalOptions="FillAndExpand" Margin="20,5,20,0">
-                <Grid  ColumnSpacing="20" RowSpacing="20" VerticalOptions="FillAndExpand">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="40*"/>
-                        <RowDefinition Height="40*"/>
-                        <RowDefinition Height="40*"/>
-                        <RowDefinition Height="40*"/>
-                        <RowDefinition Height="40*"/>
-                        <RowDefinition Height="40*"/>
-                        <RowDefinition Height="70*"/>
-                        <RowDefinition Height="70*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-
-                    
-                    
-                </Grid>
-            </StackLayout>
-
+            <Frame  Margin="20,0,20,0">
+                <Label Text="OC :135-LADANG SERAPOH" Style="{StaticResource label_for_OC}"/>
+            </Frame>
             
+            <Grid Margin="20,0,20,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Label Text="Div. Code" Grid.Column="0"/>
+                <Entry Grid.Column="1"/>
+                <ImageButton Grid.Column="2"/>
+            </Grid>
+
+            <Frame Style="{StaticResource button_shadow_frame}" HorizontalOptions="Start" Margin="20,0,0,0">
+                <Button Text="ALL DIVISION" Style="{StaticResource bottom_btn}"/>
+            </Frame>
+            
+
+
 
             <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" VerticalOptions="EndAndExpand" Margin="0,0,0,10"/>
 
